# sentential-entry

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  wrapper.sh
.github/workflows/: main.yml
src/: main.rs
